--- a/app/config/parameters.ini
+++ b/app/config/parameters.ini
@@ -1,10 +1,10 @@
 [parameters]
     database_driver = "pdo_mysql"
     database_host = "localhost"
-    database_port = "3306"
-    database_name = "ecs_db"
+    database_port = ""
+    database_name = "credit"
     database_user = "root"
-    database_password = ""
+    database_password = "animos77"
     mailer_transport = "smtp"
     mailer_host = "localhost"
     mailer_user = ""
